[gd_scene load_steps=24 format=3 uid="uid://byj7d1gpa5x2e"]

[ext_resource type="Shader" uid="uid://bfnkig0y675yk" path="res://Assets/Shaders/Highlight.gdshader" id="1_02sda"]
[ext_resource type="Script" uid="uid://dat074f4si3o5" path="res://Scripts/CardUpgrade/CardUpgrade.gd" id="1_7bhny"]
[ext_resource type="Texture2D" uid="uid://bcqsexthxqpr4" path="res://Assets/Sprites/EmptyCard.png" id="2_s3sn0"]
[ext_resource type="Texture2D" uid="uid://b8jp2p7gxl3n6" path="res://Assets/Sprites/EmptyIllustration.png" id="3_6owur"]
[ext_resource type="FontFile" uid="uid://donfw1xb4wbfa" path="res://Assets/Fonts/Jersey10-Regular.ttf" id="4_02sda"]
[ext_resource type="Texture2D" uid="uid://c1t34sy7j6ej1" path="res://Assets/Sprites/CardSurface.png" id="6_un5js"]
[ext_resource type="AudioStream" uid="uid://c7xpjt2h7h5oh" path="res://Assets/SFX/Whoosh.mp3" id="7_al0h4"]
[ext_resource type="AudioStream" uid="uid://dkj4li362qbf8" path="res://Assets/SFX/Purchase.mp3" id="8_b2061"]
[ext_resource type="AudioStream" uid="uid://inik8ykppo4j" path="res://Assets/SFX/Error.mp3" id="8_ru44a"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_02sda"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_un5js"]
shader = ExtResource("1_02sda")
shader_parameter/Line_Smoothness = 0.045
shader_parameter/Line_Width = 0.09
shader_parameter/Brightness = 3.0
shader_parameter/Rotation_deg = 30.0
shader_parameter/Distortion = 1.8
shader_parameter/Speed = 0.3
shader_parameter/Position = 0.0
shader_parameter/Position_Min = 0.25
shader_parameter/Position_Max = 0.5
shader_parameter/Alpha = 1.0
shader_parameter/surface = ExtResource("6_un5js")

[sub_resource type="LabelSettings" id="LabelSettings_6kgjq"]
font = ExtResource("4_02sda")
font_size = 24
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_fy4jq"]
font = ExtResource("4_02sda")
font_size = 28
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_un5js"]
resource_local_to_scene = true
font = ExtResource("4_02sda")
font_size = 48

[sub_resource type="AudioStreamSynchronized" id="AudioStreamSynchronized_onjw8"]
stream_count = 2
stream_0/stream = ExtResource("7_al0h4")
stream_0/volume = -10.0
stream_1/stream = ExtResource("8_b2061")
stream_1/volume = -5.0

[sub_resource type="Animation" id="Animation_al0h4"]
resource_name = "BuyCardAnimation"
length = 0.8
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 20), Vector2(0, -2000)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PriceLabel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_un5js"]
resource_name = "CardHighlightAnimation"
length = 2.0
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0523599, 0.0, -0.0523599]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -7)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pivot:z_index")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_ru44a"]
resource_name = "DisappearAnimation"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PriceLabel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_b2061"]
resource_name = "PurchaseImpossibleAnimation"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0872665, -0.0872665, 0.0872665, -0.0872665, 0.0872665, -0.0872665, 0.0872665, -0.0872665, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 0.8), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_6kgjq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pivot:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Pivot:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Pivot:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_onjw8"]
resource_name = "RevealAnimation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.143587, 1),
"update": 0,
"values": [Vector2(0, 500), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PriceLabel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"make_card_clickable"
}]
}

[sub_resource type="Animation" id="Animation_xvlda"]
resource_name = "RevealNoPriceAnimation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.143587, 1),
"update": 0,
"values": [Vector2(0, 500), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PriceLabel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"make_card_clickable"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_al0h4"]
_data = {
&"BuyCardAnimation": SubResource("Animation_al0h4"),
&"CardHighlightAnimation": SubResource("Animation_un5js"),
&"DisappearAnimation": SubResource("Animation_ru44a"),
&"PurchaseImpossibleAnimation": SubResource("Animation_b2061"),
&"RESET": SubResource("Animation_6kgjq"),
&"RevealAnimation": SubResource("Animation_onjw8"),
&"RevealNoPriceAnimation": SubResource("Animation_xvlda")
}

[node name="BaseCardUpgrade" type="Node2D"]
process_mode = 3
script = ExtResource("1_7bhny")

[node name="Pivot" type="Node2D" parent="."]

[node name="CardLayout" type="Sprite2D" parent="Pivot"]
material = SubResource("ShaderMaterial_02sda")
scale = Vector2(4, 4)
texture = ExtResource("2_s3sn0")

[node name="CardIllustration" type="Sprite2D" parent="Pivot"]
scale = Vector2(4, 4)
texture = ExtResource("3_6owur")

[node name="HighlightEffect" type="ColorRect" parent="Pivot/CardIllustration"]
material = SubResource("ShaderMaterial_un5js")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -31.5
offset_top = -44.0
offset_right = -31.5
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 2

[node name="InformationsContainer" type="VBoxContainer" parent="Pivot"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = -1.0
offset_right = 110.0
offset_bottom = 161.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CardName" type="Label" parent="Pivot/InformationsContainer"]
layout_mode = 2
text = "Nom"
label_settings = SubResource("LabelSettings_6kgjq")
horizontal_alignment = 1

[node name="CardDescription" type="Label" parent="Pivot/InformationsContainer"]
texture_filter = 1
layout_mode = 2
label_settings = SubResource("LabelSettings_fy4jq")
autowrap_mode = 3

[node name="PriceLabel" type="Label" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 196.0
offset_right = 20.0
offset_bottom = 248.0
grow_horizontal = 2
text = "Price"
label_settings = SubResource("LabelSettings_un5js")
horizontal_alignment = 1

[node name="PurchaseSuccess" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamSynchronized_onjw8")
pitch_scale = 1.2
bus = &"SFX"

[node name="PurchaseFailure" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_ru44a")
pitch_scale = 1.2
bus = &"SFX"

[node name="Animation" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
&"": SubResource("AnimationLibrary_al0h4")
}
